Fix a basic dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-optical-sizing: auto;
+  font-variant-numeric: oldstyle-nums proportional-nums;
+}
